[package]
name = "sound"
version = "0.1.0"
edition = "2021"

[[example]]
name = "rodio_soundgen"
path = "examples/rodio_soundgen.rs"

[[example]]
name = "rodio_play"
path = "examples/rodio_play.rs"

[dependencies]
rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }
rustfft = "6.1.0"
num = "0.4.0"
apodize = "1.0.0"
strider = "0.1.3"
rand = "0.8.5"
pixels = "0.12.1"
winit = "0.28.6"
winit_input_helper = "0.14.1"
colorgrad = "0.6.2"
anyhow = "1.0.71"

[profile.dev.package.rodio]
opt-level = 3

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
